--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
                 </li>
                 <li><a href="contactus.html"><span class="fa fa-envelope-o" aria-hidden="true"></span> Contact</a></li>
             </ul>
+            <form class="navbar-form navbar-right" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Email">
+                    <input type="text" class="form-control" placeholder="Password">
+                    <div class="checkbox navbar-btn">
+                        <label class="navbar-link" for="rememberMe" style="color:white">
+                            <input type="checkbox" class="autosubmit" id="rememberMe" value="false">
+                            Remember me
+                        </label>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-info">Sign in</button>
+            </form>
         </div>
     </div>
 </nav>
@@ -81,6 +94,10 @@
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:20px;"></p>
                     <img src="img/logo.png" class="img-responsive">
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <p style="padding:40px;"></p>
+                    <a type="button" align="center" href="#reserveForm" class="btn btn-warning btn-block">Reserve table</a>
                 </div>
             </div>
         </div>
@@ -149,6 +166,48 @@
                         <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div id="reserveForm" class="row row-content">
+            <div class="col-xs-12 col-sm-3">
+                <h2 style="padding:40px;">Reserve a Table</h2>
+            </div>
+            <div class="col-xs-12 col-sm-9" >
+                <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label for="numberGuests1" class="col-sm-2 control-label">Number of Guests</label>
+                        <div class="col-sm-8">
+                                <label style="padding-left:15px" class="radio-inline"><input type="radio" id="numberGuests1" name="numberGuestsradio"> 1</label>
+                                <label class="radio-inline"><input type="radio" id="numberGuests2" name="numberGuestsradio"> 2</label>
+                                <label class="radio-inline"><input type="radio" id="numberGuests3" name="numberGuestsradio"> 3</label>
+                                <label class="radio-inline"><input type="radio" id="numberGuests4" name="numberGuestsradio"> 4</label>
+                                <label class="radio-inline"><input type="radio" id="numberGuests5" name="numberGuestsradio"> 5</label>
+                                <label class="radio-inline"><input type="radio" id="numberGuests6" name="numberGuestsradio"> 6</label>
+                        </div>
+                    </div>
+                    <div class="form-group has-feedback">
+                        <label for="date" class="col-sm-2 control-label">Date & Time</label>
+                        <div class="col-sm-8">
+                            <div  class="col-sm-5"   style="border: 2px solid black">
+                                <input type="text" class="form-control" id="date" name="date" placeholder="Date" aria-describedby="DateStatus">
+                                <span class="glyphicon glyphicon-calendar form-control-feedback" aria-hidden="true"></span>
+                                <span id="DateStatus" class="sr-only">(success)</span>
+                            </div>
+                            <div  class="col-sm-5 col-sm-push-1">
+                                <input type="text" class="form-control" id="time" name="time" placeholder="Time" aria-describedby="TimeStatus">
+                                <span class="glyphicon glyphicon-time form-control-feedback" aria-hidden="true"></span>
+                                <span id="TimeStatus" class="sr-only">(success)</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-primary">Send Feedback</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
